--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,3 +38,7 @@ label {
     margin-left: 0 !important;
     margin-right: 0 !important;
 }
+
+.container-custom {
+    max-width : 90% !important;
+}
